# CatalogBuilder

./: .buildinfo  .gitignore  MANIFEST.in  README.md  RELEASE_PROCESS.md  background.html  combination.html  default-mdtf-catalog.json  developers.html  environment.yml  gen_intake_gfdl_runner_config.py  generation.html  genindex.html  index.html  meta.yaml  objects.inv  presentation.html  pylintrc  pyproject.toml  sample-mdtf-catalog.json  search.html  searchindex.js  setup.py  test-fill-catalog.csv  test-fill-catalog.json  test-nofill-catalog.csv  test-nofill-catalog.json  usage.html  validation.html
.doctrees/: background.doctree  combination.doctree  developers.doctree  environment.pickle  generation.doctree  index.doctree  presentation.doctree  usage.doctree  validation.doctree
.github/: dependabot.yml  pull_request_template.md
_sources/: background.rst.txt  combination.rst.txt  developers.rst.txt  generation.rst.txt  index.rst.txt  presentation.rst.txt  validation.rst.txt
catalogbuilder/: pytest.ini
catalogbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configs/: config-CM4.5v01_om5b06_piC_noBLING.yaml  config-CM4_piControl_C.yaml  config-ESM4.5v01_om5b04_piC.yaml  config-cmip-all.yaml  config-cmip-esm4.yaml  config-cmip.yaml  config-mdtf.yaml  config-template.yaml  config-uda-cmip.yaml  config-xshield_stellar.yaml  config.yaml
doc/: background.rst  developers.rst  generation.rst  index.rst  presentation.rst  usage.rst  validation.rst
examples/: build_xshield_catalog.ipynb  config-cfname.yaml  gen_intake_local.py  (+1 more)
(+61 files in other folders)
